<resources>
    <string name="app_name">ALC Phase 1Challenge</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="txtName">Oluchi Anoruo</string>
    <string name="txt_slack_username">\@Ladyluchi</string>
    <string name="title_track">Track:</string>
    <string name="title_country">Country:</string>
    <string name="title_email">Email:</string>
    <string name="title_phone_no">Phone No:</string>
    <string name="title_slack_username">Slack Username:</string>
    <string name="txt_track">Android</string>
    <string name="txt_country">Nigeria</string>
    <string name="txt_email">anoruooluchi@gmail.com</string>
    <string name="txt_phone_no">+2348032883041</string>
    <string name="txt_image_description">profile image</string>
    <string name="andela_url">https://andela.com/alc/</string>
    <string name="txt_btn_about">About ALC</string>
    <string name="txt_btn_profile">My Profile</string>
    <string name="welcome_message">Welcome to ALC 4.0</string>
</resources>
